# auth_master

./: .env  .env.example  .env.oauthproxy.example  .env.postgres  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  dockerignore  justfile  nginx.conf
crates/app_core/: Cargo.toml
crates/app_core/src/: adapters.rs  application.rs  main.rs
crates/app_core/src/adapters/: di.rs  id_gen.rs
crates/app_core/src/adapters/di/: container.rs
crates/app_core/src/application/: common.rs
crates/app_core/src/application/common/: id_generator.rs
crates/app_core/src/application/common/gateway/: user.rs
crates/app_core/src/application/user/: create.rs
crates/app_core/src/domain/entity/: user.rs
crates/auth_service/: Cargo.toml
crates/auth_service/src/: adapters.rs  application.rs  entities.rs  main.rs  presentation.rs
crates/auth_service/src/adapters/: di.rs  external_auth_service.rs  id_gen.rs  logging.rs  models.rs  tx_manager.rs
crates/auth_service/src/adapters/di/: adapters.rs  config.rs  container.rs  interactor.rs
crates/auth_service/src/adapters/gateway/: external_user_id.rs  user.rs
crates/auth_service/src/adapters/models/: external_user_id.rs  user.rs
crates/auth_service/src/application/: auth.rs  common.rs
crates/auth_service/src/application/auth/: dto.rs  external_web.rs
crates/auth_service/src/application/common/: external_auth.rs  id_generator.rs  tx_manager.rs
crates/auth_service/src/application/common/gateway/: external_user_id.rs  user.rs
crates/auth_service/src/application/errors/: auth.rs
crates/auth_service/src/application/errors/auth/: external_web.rs
crates/auth_service/src/application/user/: create.rs
crates/auth_service/src/domain/entity/: user.rs
crates/auth_service/src/entities/: shared.rs
crates/auth_service/src/entities/entity/: external_user_id.rs  user.rs
crates/auth_service/src/entities/errors/: base.rs
crates/auth_service/src/presentation/: error_handler.rs  user.rs
crates/migrations/: Cargo.toml
crates/migrations/migrations/: V0__INIT.sql
crates/migrations/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs
crates/shared/src/config/: external_auth_service.rs
crates/shared/src/db/: factory.rs
examples/real_world/: Dockerfile  main.py  pyproject.toml
src/: adapters.rs  application.rs  main.rs  presentation.rs
src/adapters/: config.rs  idp.rs
src/adapters/http/middleware/: auth.rs
src/application/: common.rs
src/application/common/: idp.rs
