[package]
name = "app_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
resolver = "3"

[[bin]]
name = "app_core"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.47.0", features = ["full"] }
tracing-subscriber = "0.3.19"
diesel = { version = "2.1.0" }
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }
deadpool = "0.12.2"
froodi = { version = "1.0.0-beta.2", features = ["async", "axum"] }
shared = { path = "../shared" }
uuid = { version = "1.18.0", features = ["v4"]}
validator = { version = "0.19", features = ["derive"] }
chrono = "0.4.42"
